Source/Plugins/Core/com.equella.core/resources/web/sass/legacy.scss
/* ... */
#searchform .query-wrapper select {
  width: 465px;
}

.btn#searchform-search {
  font-family: "Material Icons";
  font-size: 24px;
}

.btn#searchform-search::before {
  content: "\E8B6";
}

#col #searchform .query-wrapper select {
  width: 700px;
}

#searchform #wherecontainer #searchform-where {
  margin: 5px 0;
}

#searchform #wherecontainer #searchform-where ul {
  padding: 5px 2px 0;
  font-size: 12px;
}

#searchform #wherecontainer #searchform-where ul li {
  background: none;
  padding: 0;
  margin: 2px 0;
  line-height: 1.2em;
}

#searchform #wherecontainer #searchform-where ul li:first-child {
  margin-top: 0;
}

#searchform #wherecontainer #searchform-where ul li:last-child {
  margin-bottom: 4px;
}

#searchtabs {
  float: right;
}

.nav-tabs {
  height: 42px;
}

.nav-tabs > li {
  float: left;
  position: relative;
  display: block;
}

.nav-tabs > li > a {
  position: relative;
  display: block;
  padding: 10px 15px;
}

.nav-tabs > li.active > a,
.nav-tabs > li > a:hover,
.nav-tabs > li.active > a:hover {
}

.nav-tabs > li.active > a,
.nav-tabs > li.active > a:hover {
  border-bottom: 2px solid $secondaryColor;
}

.strip {
  text-align: center;
  padding: 4px;
  margin: 0 0 10px 0;
}

.queryactions {
  min-height: 1em;
  margin: 15px 0 0 0;
}

.queryactions div.query-action {
  padding: 4px;
}

#searchresults > img {
  margin-top: 150px;
}

#searchform .query-wrapper .selectedcontainer {
  padding-top: 5px;
  padding-bottom: 5px;
  @include typography-body-1;
  background: url(../../images/select-down.png) right 12px no-repeat #fff;
}
#searchresults-actions {
  .select2-container {
    z-index: auto;
  }
}

.ui-autocomplete li {
  margin: 0px;
  padding: 2px 5px;
  cursor: default;
  display: block;
  font: menu;
  font-size: 12px;
  line-height: 16px;
  overflow: hidden;
}

.autocompleteControl .autocomplete-container {
  float: left;
  width: 513px;
}

#wizard-controls .autocompleteControl input[type="text"] {
  height: 34px;
}

.ac_odd {
  background-color: #ffffef;
}

.ui-autocomplete .ui-menu-item a.ui-state-focus {
  color: #4b4842;
  background: #ffc !important;
}

.wizard-layout .autocompleteControl input[type="text"] {
  width: 500px;
}

.wizard-layout .indent1 .autocompleteControl input[type="text"] {
  width: 460px;
}

.wizard-layout .indent2 .autocompleteControl input[type="text"] {
  width: 405px;
}

.wizard-layout .indent3 .autocompleteControl input[type="text"] {
  width: 380px;
}

#selection-content-inner.wizard-layout .autocompleteControl input[type="text"] {
  width: 430px;
}

#selection-content-inner.wizard-layout
  .indent1
  .autocompleteControl
  input[type="text"] {
  width: 390px;
}

#selection-content-inner.wizard-layout
  .indent2
  .autocompleteControl
  input[type="text"] {
  width: 350px;
}

#selection-content-inner.wizard-layout
  .indent3
  .autocompleteControl
  input[type="text"] {
  width: 310px;
}

.autocompleteControl p.error {
  color: #ff0000;
  float: left;
}

.autocomplete-container {
  height: 25px;
  position: relative;
}

.autocomplete-container input {
  position: absolute;
  top: 0px;
  left: 0px;
}

html[dir="rtl"] .autocomplete-container input {
  right: 33px;
}

.autocomplete-container .real {
  z-index: 999;
}

.autocomplete-container .prompt {
  z-index: 888;
}

ul.ui-autocomplete {
  font-size: 11px;
}

#searchresults-actions {
  position: relative;
}

#searchresults-actions .area {
  position: relative;
  padding: 0px;
}

.search-layout a.add-to-favourites:before {
  content: "\E838";
  font-family: "Material Icons";
  font-size: 24px;
  color: $menuItemIconColor;
  vertical-align: -26%;
  padding-right: 4px;
}

#searchresults-outer-div {
  margin-top: 50px;
  border-radius: 5px;
}

#result-type-select {
  top: -34px;
  position: absolute;
  font-size: 0.875rem;
  line-height: 2.25rem;
  font-weight: 500;
  letter-spacing: 0.0892857143em;
  padding-left: 18px;

  > * {
    padding-left: 10px;
    padding-right: 10px;
    padding-top: 5px;
  }

  strong {
    border-bottom: 2px solid $secondaryColor;
    padding-bottom: 5px;
  }

  span {
    display: none;
  }
}

.separator {
  color: transparent;
}

#searchresults-actions {
  position: relative;
}

#searchresults-actions .area {
  position: relative;
  padding: 0px;
}

#actionbuttons {
  position: relative;
  right: 17px;
  text-align: right;
  top: 13px;
  z-index: 10;
  height: 0px;
  .btn {
    background-color: transparent;
    color: $primaryColor;
    margin-left: 3px;
    &:before {
      font-family: "Material Icons";
      font-size: 24px;
      color: $menuItemIconColor;
      padding-right: 4px;
    }
    &#sra_sort:before {
      content: "\E164";
    }
    &#sra_filter:before {
      content: "\e152";
    }
    &#sra_share:before {
      content: "\e80d";
    }
    &:hover {
      background-color: transparentize($primaryColor, 0.7);
    }
    &:active {
      background-color: transparentize($primaryColor, 1);
    }
    &.active {
      background-color: $primaryColor;
      color: set-text-color($primaryColor);
    }
  }
}

#actionbuttons button.filtered {
  background-color: $secondaryColor;
  color: set-text-color($secondaryColor);
}
/* ... */

